--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -24,3 +24,29 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.main-content {
+  margin-left: 80px;
+  padding: 20px;
+  transition: margin-left 0.3s ease;
+  flex-grow: 1;
+  padding-left: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.mainArea {
+  display: flex;
+  flex: 1;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+  margin-left: 250px; /* Ajusta según el ancho de tu sidebar */
+  margin-top: 60px; /* Ajusta según la altura del header */
+}
