--- a/frontend/app/components/sidebar.module.css
+++ b/frontend/app/components/sidebar.module.css
@@ -1,10 +1,10 @@
 .sidebar {
   width: 80px;
   background-color: #05874b;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 70px);
   position: fixed;
   left: 0;
-  top: 80;
+  top: 70px;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
