--- a/frontend/app/usuarios/usuarios.module.css
+++ b/frontend/app/usuarios/usuarios.module.css
@@ -8,3 +8,20 @@
     margin-top: 80px;
     padding: 20px;
   }
+
+  .usuariosTable {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 1rem;
+  }
+  
+  .usuariosTable th,
+  .usuariosTable td {
+    border: 1px solid #ccc;
+    padding: 0.75rem;
+    text-align: left;
+  }
+  
+  .usuariosTable th {
+    background-color: #05874b;
+  }
