--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: black;
     --foreground: #ededed;
   }
 }
@@ -31,6 +31,13 @@ body {
   transition: margin-left 0.3s ease;
   flex-grow: 1;
   padding-left: 20px;
+  background-color: black;
+  color: white
+}
+
+main {
+  background-color: black;
+  color: white
 }
 
 .container {
